# Pear

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
codegen/: Cargo.toml  build.rs
codegen/src/: diagnostics.rs  lib.rs  parser.rs  spanned.rs
examples/exprs/: Cargo.toml
examples/exprs/src/: main.rs
examples/group/: Cargo.toml
examples/group/src/: main.rs
examples/http/: Cargo.toml
examples/http/src/: main.rs
examples/http_version/: Cargo.toml
examples/http_version/src/: main.rs
examples/ini/: Cargo.toml
examples/ini/src/: main.rs
examples/json/: Cargo.toml
examples/json/assets/: simple.json
examples/json/benches/: json.rs
examples/json/src/: lib.rs  main.rs
examples/media_type/: Cargo.toml
examples/media_type/src/: main.rs
examples/old/exprs/src/: main.rs
examples/old/http/: Cargo.toml  version.txt
examples/old/http/src/: main.rs
examples/old/media_type/: Cargo.toml
examples/parens/: Cargo.toml
examples/parens/src/: main.rs
examples/uri/: Cargo.toml
examples/uri/fuzz/: Cargo.toml
examples/uri/fuzz/fuzz_targets/: fuzz_uri.rs  fuzz_uri_display.rs
examples/uri/src/: indexed.rs  lib.rs  main.rs  old.rs  tables.rs  utils.rs
lib/: Cargo.toml
lib/src/: combinators.rs  debug.rs  error.rs  expected.rs  input.rs  lib.rs  macros.rs  parsers.rs  result.rs  utils.rs
lib/src/input/: cursor.rs  input.rs  length.rs  mod.rs  pear.rs  show.rs  string.rs  text.rs  text_file.rs
lib/tests/: contextualize.rs  custom_expected.rs  marker.rs  parsers.rs  peek.rs  rewind.rs
scripts/: bump_version.sh  publish.sh
