[package]
name = "pear_codegen"
version = "0.1.5"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A (codegen) pear is a fruit."
license = "MIT/Apache-2.0"
repository = "https://github.com/SergioBenitez/Pear"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }
syn = { version = "0.15", features = ["full", "extra-traits", "visit-mut"] }

[build-dependencies]
yansi = "0.5"
version_check = "0.9"
