[package]
name = "pear_codegen"
version = "0.2.7"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A (codegen) pear is a fruit."
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2-diagnostics = "0.10"

[dev-dependencies]
pear = { path = "../lib" }
