[package]
name = "pear_codegen"
version = "0.2.9"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A (codegen) pear is a fruit."
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/SergioBenitez/Pear"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.30"
proc-macro2 = { version = "1.0.50" }
syn = { version = "2.0.30", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2-diagnostics = "0.10.1"

[dev-dependencies]
pear = { path = "../lib" }
