[package]
name = "pear"
version = "0.2.6"
nauthors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A pear is a fruit."
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
yansi = { version = "1.0.0-rc", optional = true }
pear_codegen = { version = "0.2.6", path = "../codegen" }
inlinable_string = "0.1.9"

[features]
default = ["color"]
color = ["yansi"]
